test_suite5/ALAN/test_suite/alan-2022-examples/failing/001780_mutation.alan
source Q begin call Q while() end
